homepage tweaks, editable titlebars, profile following spacing fix

--- a/public/stylesheets/redesign.less
+++ b/public/stylesheets/redesign.less
@@ -201,7 +201,7 @@ body {
       width: 640px;
       margin: 0 -10px -10px;
       li {
-        height: 42px;
+        min-height: 42px;
         border-bottom: 1px solid #f0f0f0;
         :last-child {
           border: 0;
@@ -219,27 +219,44 @@ body {
           background: url(/images/member-yes-no.png) 0 -12px;
         }
         .picture {
-          width: 50px;
+          width: 40px;
           float: left;
         }
         a img {
           float: left;
           margin: 5px 10px 0 0;
         }
+        a.follow-action {
+          width: 55px;
+          margin: 10px 10px 0 0;
+          font-size: 10px;
+          display: block;
+          float: left;
+          height: 20px;
+          line-height: 20px;
+          text-align: center;
+          .gradient(#f3f3f3, #eee);
+          .rounded(3px);
+          border: 1px solid #ccc;
+          color: #888;
+          text-decoration: none;
+          font-weight: bold;
+          .rounded(3px);
+        }
         .user-info {
           float: left;
           margin: 5px 0;
-          width: 190px;
-          padding: 0 10px 0 0;
+          width: 140px;
+          padding: 3px 10px 0 0;
           h4 {
-            font-size: 15px;
+            font-size: 13px;
             font-weight: bold;
             margin: 0;
             padding: 0;
-            width: 190px;
+            width: 130px;
             overflow: hidden;
             a {
-              width: 190px;
+              width: 130px;
               display: block;
               text-decoration: none;
               color: #363636;
@@ -252,9 +269,9 @@ body {
             font-size: 11px;
             margin: 0;
             padding: 0;
-            width: 190px;
+            width: 130px;
             a {
-              width: 190px;
+              width: 130px;
               display: block;
               text-decoration: none;
               color: #999;
@@ -268,18 +285,28 @@ body {
         }
         h3 {
           float: left;
-          font-size: 15px;
+          font-size: 14px;
           margin: 0;
-          padding: 13px 0 5px 0;
-          width: 230px;
+          padding: 8px 0 10px 0;
+          width: 220px;
           a {
-            width: 230px;
+            width: 215px;
             display: block;
             text-decoration: none;
             color: @blue;
             :hover {
               text-decoration: underline;
             }
+          }
+          a.location-comment-count {
+            padding: 0 0 0 16px;
+            margin: 2px 0 0 0;
+            height: 12px;
+            line-height: 12px;
+            display: block;
+            font-size: 10px;
+            color: #aaa;
+            background: url(/images/location-comment-count.png) no-repeat;
           }
         }
         a.invite {
@@ -310,12 +337,7 @@ body {
       padding: 50px 0 0 0;
       position: relative;
       #home-following-title {
-        position: absolute;
-        text-indent: -9999px;
-        width: 141px;
-        height: 32px;
-        background: url(/images/home-following-title.png);
-        left: -29px;
+        left: -23px;
         top: 25px;
       }
       a {
@@ -479,13 +501,8 @@ body {
       position: relative;
       padding: 35px 0 0 0;
       #recent-checkins-title {
-        position: absolute;
-        text-indent: -9999px;
-        left: -29px;
+        left: -23px;
         top: 10px;
-        width: 118px;
-        height: 32px;
-        background: url(/images/recent-checkins-title.png);
       }
       ul {
         list-style-type: none;
@@ -527,12 +544,7 @@ body {
       padding: 40px 0 0 0;
       position: relative;
       #profile-following-title {
-        position: absolute;
-        text-indent: -9999px;
-        width: 141px;
-        height: 32px;
-        background: url(/images/home-following-title.png);
-        left: -29px;
+        left: -23px;
         top: 15px;
       }
       a {
@@ -550,19 +562,8 @@ body {
       position: relative;
       #favorite-places-title,
       #friends-favorite-places-title {
-        position: absolute;
-        right: -28px;
+        right: -23px;
         top: -25px;
-        height: 32px;
-        text-indent: -9999px;
-      }
-      #favorite-places-title {
-        width: 108px;
-        background: url(/images/favorite-places-title.png);
-      }
-      #friends-favorite-places-title {
-        width: 155px;
-        background: url(/images/friends-favorite-places-title.png);
       }
       ul {
         list-style-type: none;
@@ -620,6 +621,35 @@ body {
   }
 }
 
+.titlebar {
+  position: absolute;
+  .gradient(#494949,#242424);
+  height: 21px;
+  line-height: 21px;
+  color: #fff;
+  font-size: 11px;
+  font-weight: bold;
+  text-shadow: 0 -1px 1px #000;
+  padding: 0 10px;
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.7);
+  -moz-box-shadow:    0 1px 3px rgba(0,0,0,.7);
+  box-shadow:         0 1px 3px rgba(0,0,0,.7);
+}
+
+.titlebar.left {
+  -moz-border-radius-topright: 5px;
+  -moz-border-radius-bottomright: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.titlebar.right {
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
 .clearfix:after {
   content: ".";
   display: block;
@@ -632,4 +662,5 @@ body {
 
 /* Hide from IE Mac \*/
 .clearfix {
-  display: block; }
+  display: block;
+}
